# querympics

./: .bumpversion.cfg  .env  .gitignore  Dockerfile  README.md  __init__.py  api.py  application.yaml  database.py  docker-compose.yaml  docker.sh  main.py  models.py  olympics.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
analysis/: explore.ipynb
app/: __init__.py  api.py  database.py  main.py  models.py  setup.py
app/data/: cleaning.py  db.py
app/data/base/: athlete_view.create.sql  result.truncate.sql
app/data/files/clean/: games.csv
data/: cleaning.py  db.py
data/base/: games.create.sql  games.truncate.sql  region.create.sql  region.truncate.sql  result.create.sql
data/files/clean/: regions.csv
querympics/: __init__.py  api.py  database.py  models.py
querympics/data/: cleaning.py  db.py  load.py
querympics/data/base/: athlete.create.sql  athlete.truncate.sql  region.view.sql
querympics/utils/: helper.py
test/: api_test.py  helper_test.py  query_test.py
test/utils/: helper_test.py
utils/: database.py  helper.py
